- Aligned add button
- fixed up settings layout